Fix word-wrap bug in Safari

--- a/tenca_webui/static/css/tenca.css
+++ b/tenca_webui/static/css/tenca.css
@@ -3,6 +3,6 @@
 }
 
 .wrappable-list-id {
-	overflow: hidden;
-	word-wrap: anywhere;
+	word-wrap:  break-word;
+	word-break: break-word;
 }
